# benchmark-py-TravelPlanner

./: .gitignore  MODEL-LANDSCAPE.md  README.md  benchmark_data.json  main.py  plot_model_comparison.py  pyproject.toml  run_all_models.sh
docs/: model-comparison.md
tests/: test_data.py  test_evaluation.py  test_models.py  test_tools.py
travelplanner_bench/: __init__.py  agent.py  data.py  evaluation.py  models.py  plan_assembler.py  retrieval_agent.py  runner.py  token_tracking.py  tools.py
